fixed scrollbar thumbs
you can finally see them in light mode
(crazy)

--- a/solar.css
+++ b/solar.css
@@ -121,9 +121,9 @@
     --info-help-foreground: hsl(212,calc(var(--saturation-factor, 1)*100%),43.9%);
     --info-help-text: #000;
     --status-warning-text: #fff;
-    --scrollbar-thin-thumb: var(--solarized-base2);
+    --scrollbar-thin-thumb: #e2dbc6;;
     --scrollbar-thin-track: transparent;
-    --scrollbar-auto-thumb: var(--solarized-base2);
+    --scrollbar-auto-thumb: #e2dbc6;;
     --scrollbar-auto-track: var(--solarized-base3);
     --scrollbar-auto-scrollbar-color-thumb: #e3e5e8;
     --scrollbar-auto-scrollbar-color-track: #f2f3f5;
